--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ APP_SECRET=01fae4533fcd3e13be0fdc884c830524
 DATABASE_URL="mysql://root:@127.0.0.1:3306/ecom?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=semaphore
+###< symfony/lock ###
