--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,8 +25,8 @@ security:
             # https://symfony.com/doc/current/security.html#the-firewall
             form_login:
                 # "login" is the name of the route created previously
-                login_path: '/login'
-                check_path: '/login'
+                login_path: '/connexion'
+                check_path: '/connexion'
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
