--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,8 +25,8 @@ security:
             # https://symfony.com/doc/current/security.html#the-firewall
             form_login:
                 # "login" is the name of the route created previously
-                login_path: '/connexion'
-                check_path: '/connexion'
+                login_path: 'app_login'
+                check_path: 'app_login'
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
@@ -38,8 +38,8 @@ security:
 
                 # where to redirect after logout
                 target: app_home
-            # custom_authenticator: App\Security\LoginAuthenticator
-            # entry_point: App\Security\LoginAuthenticator
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            entry_point: App\Security\LoginFormAuthenticator
 
             # protection against force brut attack
             # configure the maximum login attempts in a custom period of time
@@ -55,6 +55,7 @@ security:
         - { path: ^/commande, roles: ROLE_USER }
         - { path: ^/mon_panier, roles: ROLE_USER }
         - { path: ^/myMessages, roles: ROLE_USER }
+        - { path: ^/sendMessage, roles: ROLE_USER }
 
 when@test:
     security:
