--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=01fae4533fcd3e13be0fdc884c830524
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 
-DATABASE_URL="mysql://root:@127.0.0.1:3306/ecom?serverVersion=5.7"
+DATABASE_URL="mysql://bff82471afc977:e2033d3b@us-cdbr-east-05.cleardb.net/heroku_83a5572442e5ad9?reconnect=true"
 
 ###< doctrine/doctrine-bundle ###
 
